erro.txt
PS C:\Users\ausco\audio-capture\build> cmake --build .
[ 14%] Building CXX object CMakeFiles/audio-capture.dir/src/AudioCapture.cpp.obj
In file included from C:\Users\ausco\audio-capture\src\AudioCapture.cpp:1:
C:/Users/ausco/audio-capture/include/AudioCapture.h:14:13: warning: 'PLATFORM_WINDOWS' redefined
   14 |     #define PLATFORM_WINDOWS
      |             ^~~~~~~~~~~~~~~~
<command-line>: note: this is the location of the previous definition
C:\Users\ausco\audio-capture\src\AudioCapture.cpp: In destructor 'virtual AudioCapture::~AudioCapture()':
C:\Users\ausco\audio-capture\src\AudioCapture.cpp:21:9: warning: pure virtual 'virtual void AudioCapture::stop()' called from destructor
   21 |     stop();
      |     ~~~~^~
C:\Users\ausco\audio-capture\src\AudioCapture.cpp: At global scope:
C:\Users\ausco\audio-capture\src\AudioCapture.cpp:35:6: error: no declaration matches 'bool AudioCapture::initializeWaveIn(const std::string&)'
   35 | bool AudioCapture::initializeWaveIn(const std::string &outputFile)
      |      ^~~~~~~~~~~~
C:/Users/ausco/audio-capture/include/AudioCapture.h:39:10: note: candidate is: 'bool AudioCapture::initializeWaveIn()'
   39 |     bool initializeWaveIn();
      |          ^~~~~~~~~~~~~~~~
C:/Users/ausco/audio-capture/include/AudioCapture.h:23:7: note: 'class AudioCapture' defined here
   23 | class AudioCapture {
      |       ^~~~~~~~~~~~
C:\Users\ausco\audio-capture\src\AudioCapture.cpp:80:6: error: no declaration matches 'void AudioCapture::startInternal()'
   80 | void AudioCapture::startInternal()
      |      ^~~~~~~~~~~~
C:\Users\ausco\audio-capture\src\AudioCapture.cpp:80:6: note: no functions named 'void AudioCapture::startInternal()'
C:/Users/ausco/audio-capture/include/AudioCapture.h:23:7: note: 'class AudioCapture' defined here
   23 | class AudioCapture {
      |       ^~~~~~~~~~~~
mingw32-make[2]: *** [CMakeFiles\audio-capture.dir\build.make:94: CMakeFiles/audio-capture.dir/src/AudioCapture.cpp.obj] Error 1
mingw32-make[1]: *** [CMakeFiles\Makefile2:86: CMakeFiles/audio-capture.dir/all] Error 2
mingw32-make: *** [Makefile:90: all] Error 2